<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_container"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ratehistory.RateHistoryActivity">

    <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:seriesType="line"
            android:id="@+id/graph"/>

    <TextView
            android:id="@+id/start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/graph"
            android:layout_marginLeft="16dp"
            android:text="@string/start_date_label"/>

    <DatePicker
            android:id="@+id/start_date"
            android:datePickerMode="spinner"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_below="@id/start_date_label"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:layout_height="100dp"/>

    <TextView
            android:id="@+id/end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date"
            android:layout_marginLeft="16dp"
            android:text="@string/end_date_label"/>

    <DatePicker
            android:id="@+id/end_date"
            android:calendarViewShown="false"
            android:layout_margin="8dp"
            android:layout_below="@id/end_date_label"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:datePickerMode="spinner"
            android:layout_height="100dp"/>

    <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_label"
            android:elevation="0dp"
            android:layout_below="@id/end_date"/>

    <include
            layout="@layout/loading_view"
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

</RelativeLayout>